# mp-odrf

./: ANNOUNCE  Makefile.am  README  configure.ac  configure.sh
doc/: macros.texi  mp-odrf.texi
meta/scripts/: libmpodrf.pc.in
meta/slackware/: slack-desc.in
src/: mp-odrf-errors.c  mp-odrf-internals.h  mp-odrf-public-api.c  mp-odrf-root-bracketing-bisection.c  mp-odrf-root-bracketing-brent.c  mp-odrf-root-bracketing-falsepos.c  mp-odrf-root-polishing-newton.c  mp-odrf-root-polishing-secant.c  mp-odrf-root-polishing-steffenson.c  mp-odrf-version.c  mp-odrf.c  mp-odrf.h  polishing.c
tests/: bisection-example.c  bisection.c  brent-example.c  debug.h  falsepos-example.c  macros-0.c  macros-1.c  macros-2.c  newton-example.c  root-bracketing.c  root-polishing.c  secant-example.c  steffenson-example.c  test.h  version.c
